syntax = "proto3";
option go_package = "../pb";

package pb;

message payload {
    int32  seq           = 1;
    int32  mtype         = 2;
    string serviceMethod = 3;
    bytes  meta          = 4;
    int32  bodyCodec     = 5;
    bytes  body          = 6;
    bytes  xferPipe      = 7;
}
